# silifuzz

./: .bazelrc  .gitignore  AUTHORS  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  install_build_dependencies.sh
.kokoro/gcp_ubuntu/: continuous.cfg  kokoro_build.sh  presubmit.cfg  run_tests_inside_docker.sh
build_defs/: BUILD  constants.bzl  nosan.bzl
build_defs/platform/: BUILD
common/: BUILD  decoded_insn.cc  decoded_insn.h  decoded_insn_fuzz_test.cc  decoded_insn_test.cc  generate_tests.py  harness_tracer.cc  harness_tracer.h  harness_tracer_test.cc  harness_tracer_test_helper.cc  mapped_memory_map.cc  mapped_memory_map.h  mapped_memory_map_test.cc  memory_bytes_set.cc  memory_bytes_set.h  memory_bytes_set_test.cc  memory_mapping.cc  memory_mapping.h  memory_perms.cc  memory_perms.h  memory_state.cc  memory_state.h  memory_state_test.cc  proxy_config.cc  proxy_config.h  proxy_config_test.cc  raw_insns_util.cc  raw_insns_util.h  raw_insns_util_test.cc  snapshot.cc  snapshot.h  snapshot_enums.cc  snapshot_enums.h  snapshot_file_util.cc  snapshot_file_util.h  snapshot_printer.cc  snapshot_printer.h  snapshot_proto.cc  snapshot_proto.h  snapshot_proto_test.cc  (+14 more)
doc/: proxy_architecture.md  snap.md  what_makes_a_good_test.md
fuzzer/: BUILD  program.cc  program.h  program_aarch64.cc  program_arch.h  program_batch_mutator.cc  program_batch_mutator.h  program_mutation_ops.cc  program_mutation_ops.h  program_mutator.cc  program_mutator.h  program_mutator_fuzz_test.cc  program_mutator_test.cc  program_x86_64.cc  silifuzz_centipede_main.cc
fuzzer/hashtest/: BUILD  README.md  candidate.cc  candidate.h  corpus_config.h  corpus_stats.h  debugging.cc  debugging.h  (+49 more)
instruction/: BUILD  capstone_disassembler.cc  capstone_disassembler.h  decoded_insn.cc  decoded_insn.h  decoded_insn_fuzz_test.cc  decoded_insn_test.cc  default_disassembler.h  disassembler.h  disassembler_test.cc  static_insn_filter.cc  static_insn_filter.h  static_insn_filter_test.cc  xed_disassembler.cc  xed_disassembler.h  xed_util.cc  xed_util.h  xed_util_test.cc
orchestrator/: BUILD  binary_log_channel.cc  binary_log_channel.h  binary_log_channel_test.cc  corpus_util.cc  corpus_util.h  corpus_util_test.cc  env.cc  env.h  env_test.cc  execution_context.cc  execution_context.h  execution_context_test.cc  orchestrator_test.py  orchestrator_test.sh  orchestrator_util.cc  orchestrator_util.h  orchestrator_util_test.cc  result_collector.cc  result_collector.h  result_collector_test.cc  silifuzz_orchestrator.cc  silifuzz_orchestrator.h  silifuzz_orchestrator_main.cc  silifuzz_orchestrator_test.cc  test_runner.cc
player/: BUILD  play_options.cc  play_options.h  player_result_proto.cc  player_result_proto.h  player_result_proto_test.cc  trace_options.cc  trace_options.h
proto/: BUILD  binary_log_entry.proto  corpus_metadata.proto  player_result.proto  session_summary.proto  snapshot.proto  snapshot_execution_result.proto
proxies/: BUILD  arch_feature_generator.h  unicorn_aarch64.cc  unicorn_aarch64_test.cc  unicorn_tracer.h  unicorn_tracer_aarch64.cc  unicorn_tracer_x86_64.cc  unicorn_util.cc  unicorn_util.h  unicorn_x86_64.cc  unicorn_x86_64.h  unicorn_x86_64_example.cc  unicorn_x86_64_sancov.cc  unicorn_x86_64_test.cc  user_features.h
runner/: BUILD  baked_snap_corpus.cc  default_snap_corpus.h  disassembling_snap_tracer.cc  disassembling_snap_tracer.h  disassembling_snap_tracer_test.cc  endspot.cc  endspot.h  global_static_initializers_test.sh  loading_snap_corpus.cc  make_snapshot.cc  make_snapshot.h  runner.cc  runner.h  runner_flags.cc  runner_flags.h  runner_integration_test.cc  runner_main.cc  runner_main_options.h  runner_provider.cc  runner_provider.h  runner_provider_test.cc  runner_test.cc  runner_util.cc  runner_util.h  snap_maker.cc  snap_maker.h  snap_maker_test.cc  snap_maker_test_util.cc  snap_maker_test_util.h  snap_runner_util.cc  snap_runner_util.h
snap/: BUILD  exit_sequence.cc  exit_sequence.h  snap.h  snap_checksum.cc  snap_checksum.h  snap_checksum_test.cc  snap_corpus_util.cc  snap_corpus_util.h  snap_corpus_util_test.cc  snap_relocator.cc  snap_relocator.h  snap_relocator_fuzz_test.cc  snap_relocator_test.cc  snap_test.cc  snap_util.cc  snap_util.h
tool_libs/: BUILD  corpus_partitioner_lib.cc  corpus_partitioner_lib.h  corpus_partitioner_lib_test.cc  fix_tool_common.cc  fix_tool_common.h  simple_fix_tool_counters.h  simple_fix_tool_counters_test.cc  snap_group.cc  snap_group.h  snap_group_test.cc  snapshot_summary_proto_util.cc  snapshot_summary_proto_util.h
tools/: BUILD  fuzz_filter_tool.cc  fuzz_filter_tool.h  fuzz_filter_tool_main.cc  fuzz_filter_tool_test.cc  fuzz_filter_tool_test.sh  silifuzz_platform_id.cc  simple_fix_tool.cc  simple_fix_tool.h  simple_fix_tool_main.cc  simple_fix_tool_test.cc  snap_corpus_tool.cc  snap_corpus_tool_test.sh  snap_tool.cc  transform_centipede_fuzz_results_to_silifuzz_corpus.py
tracing/: BUILD  analysis.cc  analysis.h  capstone_disassembler.cc  capstone_disassembler.h  default_disassembler.h  disassembler.h  disassembler_test.cc  execution_trace.h  execution_trace_test.cc  extension_registers.cc  extension_registers.h  extension_registers_test.cc  native_tracer.cc  native_tracer.h  native_tracer_test.cc  save_x86_xstate.S  trace_tool.cc  tracer.h  tracer_factory.h  tracer_test_util.h  tracing_test_util.h  unicorn_tracer.h  unicorn_tracer_aarch64.cc  unicorn_tracer_test.cc  unicorn_tracer_x86_64.cc  unicorn_util.cc  unicorn_util.h  xed_disassembler.cc  xed_disassembler.h
util/: BUILD  arch.cc  arch.h  arch_mem.cc  arch_mem.h  arch_test.cc  atoi.cc  atoi.h  atoi_internal.cc  atoi_internal.h  atoi_test.cc  avx.cc  avx.h  avx_test.cc  avx_test_helper.S  bit_matcher.h  bitops.h  bitops_test.cc  byte_io.cc  byte_io.h  byte_io_test.cc  cache.h  checks.cc  checks.h  checks_test.cc  cpu_features.cc  cpu_features.h  cpu_features_test.cc  cpu_id.cc  cpu_id.h  cpu_id_test.cc  crc32c.cc  crc32c.h  crc32c_benchmarks.cc  crc32c_internal.cc  crc32c_internal.h  crc32c_test.cc  crc32c_zero_extension_tables.cc  data_dependency.cc  data_dependency.h  (+106 more)
(+807 files in other folders)
